--- a/project.json
+++ b/project.json
@@ -16,7 +16,9 @@
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-    "Microsoft.EntityFrameworkCore": "1.0.0-*"
+    "Microsoft.EntityFrameworkCore": "1.1.0-*",
+    "Microsoft.EntityFrameworkCore.Design": "1.1.0-*",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0"
   },
 
   "tools": {
