--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "DatabaseLocal" : {
+    "Provider" : "Sqlite",
+    "Location" : "Filename=./todo.sqlite"
+  },
+  "DatabaseAzure" : {
+    "Provider" : "SqlServer",
+    "Location" : "Server=tcp:isne360.database.windows.net,1433;Initial Catalog=isne360;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
