--- a/project.json
+++ b/project.json
@@ -18,7 +18,8 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
     "Microsoft.EntityFrameworkCore": "1.1.0-*",
     "Microsoft.EntityFrameworkCore.Design": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0"
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0-*",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-*"
   },
 
   "tools": {
