--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
   },
   "DatabaseAzure" : {
     "Provider" : "SqlServer",
-    "Location" : "Server=tcp:isne360.database.windows.net,1433;Initial Catalog=isne360;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Location" : "Server=tcp:isne360.database.windows.net,1433;Initial Catalog=isne360;Persist Security Info=False;User ID=pruet;Password=Qwertyu8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
