--- a/project.json
+++ b/project.json
@@ -19,7 +19,9 @@
     "Microsoft.EntityFrameworkCore": "1.1.0-*",
     "Microsoft.EntityFrameworkCore.Design": "1.1.0-*",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-*"
+    "Microsoft.EntityFrameworkCore.Sqlite.Design": "1.1.0-*",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-*",
+    "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.1.0-*"
   },
 
   "tools": {
